src/test/deca/codegen/invalid/homemade/autoreferencement_nocheck.res
  ** IMA ** ERREUR ** Ligne 30 : 
    PUSH : Debordement de la pile
